src/parser/tests/snapshots/mathemascii__parser__tests__special_cases__color.snap
---
source: src/parser/tests/special_cases.rs
expression: "Snapshot((input, math))"
---
color(red)(x)

Expression {
| Color(
| | Text("red"),
| | OpenParen
| | | Expression {
| | | | Variable("x")
| | | }
| | |
| | CloseParen
| )
}


