src/parser/tests/snapshots/mathemascii__parser__tests__special_cases__column_vector.snap
---
source: src/parser/tests/special_cases.rs
expression: "Snapshot((input, math))"
---
((a),(b))

Expression {
| OpenParen
| | Expression {
| | | OpenParen
| | | | Expression {
| | | | | Variable("a")
| | | | }
| | | |
| | | CloseParen
| | }
| | 
| | Expression {
| | | Other(Comma)
| | }
| | 
| | Expression {
| | | OpenParen
| | | | Expression {
| | | | | Variable("b")
| | | | }
| | | |
| | | CloseParen
| | }
| |
| CloseParen
}


