src/parser/tests/snapshots/mathemascii__parser__tests__special_cases__derivatives.snap
---
source: src/parser/tests/special_cases.rs
expression: "Snapshot((input, math))"
---
f'(x) = dy/dx

Expression {
| Function(F)
}

Expression {
| Operator(Prime)
}

Expression {
| OpenParen
| | Expression {
| | | Variable("x")
| | }
| |
| CloseParen
}

Expression {
| Relation(Eq)
}

Expression {
| Fraction(
| | Variable("dy"),
| | Variable("dx")
| )
}


